be cracked theme

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Betheme
+Theme Name: Be2
 Theme URI: https://themes.muffingroup.com/betheme/
 Author: Muffin group
 Author URI: https://muffingroup.com/
